# mlops

./: .dockerignore  .dvcignore  .gitignore  CLEANUP_SUMMARY.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  cookiecutter.json  dvc.yaml  eda_cancer_patients.py  presentation_outline.md  pyproject.toml  requirements.txt  verify_setup.py
.dvc/: config
.github/workflows/: cd.yml  ci.yml
.virtual_documents/notebooks/: eda_cancer_patients.ipynb
config/: config.yaml  config_heart.yaml
data/processed/: test_features.csv
docs/: CLEANUP_SUMMARY.md  HEART_DATASET_PIPELINE.md  PIPELINE_TEST_REPORT.md  PROJECT_STATUS.md  README_COOKIECUTTER.md  SETUP_COMPLETE.md  VERIFICATION_REPORT.md  VERIFICATION_SUMMARY.md
mlops_assignment/: __init__.py  config.py  dataset.py  features.py  plots.py
mlops_assignment/modeling/: predict.py  train.py
mlruns/0/: meta.yaml
mlruns/667412238049537892/: meta.yaml
mlruns/667412238049537892/5e2a8d8108e549a282bdf858c5191f08/: meta.yaml
mlruns/667412238049537892/816a8bef88954448954e6dbdc0e96c52/: meta.yaml
models/: lung_cancer_model.pkl
monitoring/: drift_detection.py
notebooks/: eda_cancer_patients.ipynb
notebooks/.ipynb_checkpoints/: eda_cancer_patients-checkpoint.ipynb  eda_lung_cancer-checkpoint.ipynb
src/: __init__.py
src/features/: __init__.py  build_features.py
src/models/: __init__.py  predict.py  train.py  train_heart.py  utils.py
src/webapp/: __init__.py  app.py
tests/: test_predict.py  test_webapp.py
tests/.ipynb_checkpoints/: test_features-checkpoint.py
(+58 files in other folders)
